feat: add resend email service feat: implement email verification on backend refactor: move remaining repository calls to service layer in Auth controller

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
 #spring.jpa.defer-datasource-initialization=true
+resend.apikey=${RESEND_API_KEY}
+frontend.url=http://localhost:3000
 
 ###### Hikari #####
 spring.datasource.hikari.username=${environment.db.user}
