--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -99,6 +99,11 @@
 			<version>1.4.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.resend</groupId>
+			<artifactId>resend-java</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.yubico</groupId>
 			<artifactId>webauthn-server-core</artifactId>
 			<version>2.7.0</version>
